tests/integration/snapshots/integration__conformance__n_number_++.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[++1234]
stderr ---
error: unexpected character `+`. expected start of a json value
 --> stdin:1:2
  |
1 | [++1234]
  |  ^
